--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "geist": "^1.3.0",
     "next": "14.2.3",
+    "node-fetch": "^2.7.0",
     "react": "^18",
     "react-dom": "^18"
   },
