--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "chart.js": "^4.4.3",
     "geist": "^1.3.0",
-    "next": "14.2.3",
+    "next": "14.2.5",
     "node-fetch": "^2.7.0",
     "react": "^18",
     "react-dom": "^18"
